[Wayland] Dragging a tab to another window duplicates it rather than moving it
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox70 | --- | verified |
People
(Reporter: botond, Assigned: stransky)
References
(Blocks 2 open bugs)
Details
Attachments
(1 file)
STR
- Run Firefox Nightly with
MOZ_ENABLE_WAYLAND=1. I am testing on Debian 10 with GNOME. - Open a second browser window.
- Open a new tab in the first browser window and navigate to a website.
- Drag the tab from the first window to the second.
Expected results
The tab is moved to the new window.
Actual results
The tab is duplicated to the new window. That is, a tab with the same website opens in the new window, but the original tab sticks around in the old window.
Comment 1•6 years ago
|
||
I also see (intermittently) blank tabs instead of duplication.
Updated•6 years ago
|
| Assignee | ||
Comment 2•6 years ago
|
||
Yes, it's because Wayland default action is Copy and X11 default action is Move. You can change it by "Shift" key during the D&D. We may consider to change that to keep X11 compatibility.
Comment 3•6 years ago
|
||
FWIW, dragging a tab in Wayland GNOME Web moves the tab (does not copy).
| Assignee | ||
Comment 4•6 years ago
|
||
(In reply to Asif Youssuff from comment #3)
FWIW, dragging a tab in Wayland GNOME Web moves the tab (does not copy).
Okay, let's fix that in Firefox too.
| Assignee | ||
Comment 5•6 years ago
|
||
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Updated•6 years ago
|
Pushed by nerli@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/fe6f7a136d06
[Wayland] Use MOVE as a default Drag and Drop action to match X11 behavior, r=jhorak
Comment 7•6 years ago
|
||
| bugherder | ||
Comment 10•6 years ago
|
||
Has this fix reached nightly?? I use the aug 29 one and when i drag a tab within the same window it still gets copied instead of moved?
Comment 12•6 years ago
|
||
I can verify this is fixed in latest Nightly (2019-08-29) with Wayland backend on Ubuntu 19.04. The default drag behavior is move and pressing Ctrl switches to copy.
Comment 13•6 years ago
|
||
@Kestrel
Can you check the within the same window drag behavior??? Ie. open two/three tabs and try to rearrange them.
Comment 14•6 years ago
|
||
Rearranging tabs by drag and drop within the same window moves them by default for me (as it was before), this bug only manifested when dragging outside the tab strip (Bug 1532618).
Comment 15•6 years ago
|
||
Unless there is a setting i am missing somewhere trying to rearrange tabs copies them. Dragging from one window to another works fine.
Weston as a compositor.
| Assignee | ||
Comment 16•6 years ago
|
||
(In reply to ApB from comment #15)
Unless there is a setting i am missing somewhere trying to rearrange tabs copies them. Dragging from one window to another works fine.
Weston as a compositor.
Please open a new bug for it specifically for Weston. This is a bit tricky and depends on the actual compositor.
Comment 17•6 years ago
|
||
(In reply to Martin Stránský [:stransky] from comment #16)
(In reply to ApB from comment #15)
Unless there is a setting i am missing somewhere trying to rearrange tabs copies them. Dragging from one window to another works fine.
Weston as a compositor.
Please open a new bug for it specifically for Weston. This is a bit tricky and depends on the actual compositor.
The thing is that we have around 5 (???) different compositors and FF should work the same way on all of them.
Description
•